# ppmpa

./: Cargo.toml  LICENSE  README.md
benches/: ppmpa_benchmark.rs
doc/: ebnf-camera.txt
example/: camera0.scr  ex-11.2.scene  ex-11.9.scene  pm_h2r.rb
src/: camera.rs  lib.rs  main.rs  photonmap.rs  scene.rs  screen.rs  tracer.rs
src/ray/: algebra.rs  bsdf.rs  geometry.rs  light.rs  material.rs  mod.rs  object.rs  optics.rs  physics.rs  surface.rs
util/: averager2.rb  iterator.rb  iterator2.rb
